--- a/redbusclone/task.html
+++ b/redbusclone/task.html
@@ -49,7 +49,95 @@
             <div class="search">
                 <p>search</p>
             </div>
-        </div> 
+         
+        </div>
+         <div class="trendingoffers">
+            <h2>TRENDING OFFERS</h2>
+            <div class="cardsgroup">
+               <div class="card1">
+            <div class="card1left">
+                <img src=".\assets\trending offer 1.png" alt="" srcset="">
+            </div><div class="card1right">
+                <button class="busbtn">BUS</button><br>
+                <p>SAVE UPTO Rs 250 ON BUS <br> TICKET</p>
+                <p>VALID TILL 30 SEP</p><br>
+                <button class="first">
+                    FIRST
+                </button><img src=".\assets\copy.svg" alt="" srcset="">
+            </div>
+               </div>
+               <div class="card2">
+                <div class="card2left">
+                   <img src=".\assets\trending offer 2.png" alt="" srcset="">
+                 </div><div class="card2right">
+                  <button class="busbtn2">BUS</button><br>
+                  <p>SAVE UPTO Rs 300 IN APTS  <br> ROUTES ON BUS</p>
+                  <p>VALID TILL 30 SEP</p><br>
+                  <button class="superhit">
+                    SUPERHIT
+                  </button><img src=".\assets\copy.svg" alt="" srcset="">
+                </div>
+               </div>
+               <div class="card3">
+                <div class="card3left">
+                   <img src=".\assets\trending offer 3.png" alt="" srcset="">
+                 </div><div class="card3right">
+                  <button class="busbtn3">BUS</button><br>
+                  <p>SAVE UPTO Rs 300 IN APTS  <br> ROUTES ON BUS</p>
+                  <p>VALID TILL 30 SEP</p><br>
+                  <button class="BUS200">
+                    BUS200
+                  </button><img src=".\assets\copy.svg" alt="" srcset="">
+                </div>
+               </div>
+               <div class="card4">
+                <div class="card4left">
+                   <img src=".\assets\trending offer 4.png" alt="" srcset="">
+                 </div><div class="card4right">
+                  <button class="busbtn4">BUS</button><br>
+                  <p>SAVE UPTO Rs 300 IN APTS  <br> ROUTES ON BUS</p>
+                  <p>VALID TILL 30 SEP</p><br>
+                  <button class="BUS200">
+                    BUS200
+                  </button><img src=".\assets\copy.svg" alt="" srcset="">
+                </div>
+               </div>
+           </div>
+        </div>
+    </div>
+    <div class="down2">
+        <div class="left">
+            <h1>NOW, <b>GET MORE THAN <br>JUST BUS</b> TICKETS WITH <br>REDBUS!</h1>
+            <div class="bustrainticket">
+                <button class="down2busbtn">
+                    <div class="down2bus"><img src=".\assets\ryde_vertical.svg" alt="" srcset=""></div>
+                    <p>CAB/BUS RENTAL</p>
+                </button><button class="down2trainbtn">
+                    <div class="down2train"><img src=".\assets\rail_vertical.svg" alt="" srcset=""></div>
+                    <p>TRAIN TICKETS</p>
+                </button>
+            </div>
+            <h2>Rent Cabs, Tempo Travellers & Buses with best drivers</h2><br>
+            <div class="outstation">
+                <div><img src=".\assets\ryde_car.svg" alt="" srcset=""></div>
+                <p> <b>OUTSTATION</b></p>
+            </div>
+            <div class="outstation">
+                <div><img src=".\assets\ryde_car_hourly.svg" alt="" srcset=""></div>
+                <p> <b>HOURLY RENTAL</b></p>
+            </div>
+            <div class="outstation">
+                <div><img src=".\assets\ryde_airport_transport.svg" alt="" srcset=""></div>
+                <p> <b>AIRPORT TRANSFERS</b></p>
+            </div>
+            <div class="buscab"><button class="busrentabtn">
+                BOOK CAB / BUS RENTA
+                <div> <img src=".\assets\right arrow.png" alt="" srcset=""></div>
+            </button></div>
+        </div>
+        <div class="right">
+            <img src=".\assets\rydePop.svg" alt="">
+        </div>
     </div>
 </body>
 </html>
