--- a/redbusclone/task.html
+++ b/redbusclone/task.html
@@ -139,5 +139,87 @@
             <img src=".\assets\rydePop.svg" alt="">
         </div>
     </div>
+    <div class="down3">
+        <div class="enjoy">
+            <h1>ENJOY THE APP!</h1><br>
+          <div class="enjoycontainer">
+            <div class="enjoyleft">
+                <div class="quickaccess">
+                    <img src=".\assets\greentick.svg" alt="" srcset=""><p>Quick access</p>
+                </div>
+                <div class="superior">
+                    <img src=".\assets\greentick.svg" alt="" srcset=""><p>Superior live tracking</p>
+                </div>
+                <div class="downloads">
+                    <div class="downloadsleft">
+                        <div class="star4"><p>4.5</p><img src=".\assets\star-svgrepo-com.svg" alt="" srcset=""> </div>
+                        <p>50M + downloads <br>
+                            <B>PLAY STORE</B>
+                        </p>
+                    </div>
+                    <div id="downloadsleftright" class="downloadsleft">
+                        <div class="star4"><p>4.5</p><img src=".\assets\star-svgrepo-com.svg" alt="" srcset=""> </div>
+                        <p>50M + downloads <br>
+                            <B>PLAY STORE</B>
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="enjoyright">
+                <p>get download linked on</p>
+                <div class="link">
+                    <div class="whatsapp">
+                        <p>+91 whatsapp number</p>
+                    </div><div class="getlink">
+                        <p>GetLink</p>
+                    </div>
+                </div>
+                <div class="downloadmedium">
+                    <div class="downloadmediumleft">
+                        <p>scan to download</p>
+                        <img src=".\assets\qrCode.svg" alt="" srcset="">
+                    </div>
+                    <div class="downloadmediumright">
+                        <p>download the app on</p>
+                        <img src=".\assets\playStore.svg" alt="" srcset="">
+                        <img src=".\assets\appStore.svg" alt="" srcset="">
+                    </div>
+                </div>
+            </div>
+          </div>
+        </div>
+        <div class="primo">
+            <div class="topprimo">
+                <img src=".\assets\primoTopBanner.svg" alt="" srcset="">
+            </div>
+            <div class="downprimo">
+                <div class="down1primo">
+                    <div class="primocard1">
+                        <div class="primocard1left"><img src=".\assets\primoSubImg1.svg" alt=""></div>
+                        <div class="primocard1right">
+                            <h2>1 of 5 buses qualify</h2>
+                            <p>Primo’s strict safety <br> qualification ensures a <br> safer travel for you</p>
+                        </div>
+                    </div>
+                    <div class="primocard2">
+                        <div class="primocard2left"><img src=".\assets\primoSubImg2.svg" alt=""></div>
+                        <div class="primocard2right">
+                            <h2>1 of 5 buses qualify</h2>
+                            <p>Primo’s strict safety <br> qualification ensures a <br> safer travel for you</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="down2primo">
+                    <div class="primocard3">
+                        <div class="primocard3left"><img src=".\assets\primoSubImg3.svg" alt=""></div>
+                        <div class="primocard3right">
+                            <h2>1 of 5 buses qualify</h2>
+                            <p>Primo’s strict safety <br> qualification ensures a <br> safer travel for you</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
